# Portfolio-server-analitical-web

./: README.md  package-lock.json  package.json  test.xlsx  test2.xlsx  testMapSwiata.xlsx  testTabela.xlsx  testWykresKolowy.xlsx  tsconfig.json
TestExcels/: euTestMap.xlsx  polandMapTest.xlsx  portfolioDiagramTestMultipleYears.xlsx  tabeleTest.xlsx  testPieChart.xlsx  testWalutyNowySzablon.xlsx  testWorldMap.xlsx
oldTests/: testMapa.xlsx  testWaluty.xlsx
src/: index.ts
src/UniqueClientManager/: UniqueNumberGenerator.ts
src/controllers/: calendarCtrl.ts
src/databaseScripts/: Site.js  Site.ts  dbAddress.ts  mongooseSchemas.js  mongooseSchemas.ts
src/graphQL/: typeDefs.js  typeDefs.ts
src/graphQL/resolvers/Query/: data.ts  hello.js  hello.ts
src/keys/: Certyfikatserver.txt  Klucz prywatnyserver.txt
src/proxyServer/: index.js
src/routes/client/serveDataRoutes/: databaseAccessRoutes.js  databaseAccessRoutes.ts  databaseSitesRoutes.js  databaseSitesRoutes.ts
src/routes/upload/: excelFileUpload.js  excelFileUpload.ts
src/routes/upload/uploads/excel/: test.xlsx
src/routes/utilities/excel/: processExcel.js  processExcel.ts
src/rustServer/rocket-server/: Cargo.toml
src/rustServer/rocket-server/src/: main.rs
